<resources>
    <string name="service_name">Token Card</string>
    <string name="card_title">Token</string>

    <string name="app_name">Acme Shop</string>
    <string name="login_lbl">Login</string>
    <string name="signup_lbl">Sign Up</string>
    <string name="submit_lbl">Submit</string>
    <string name="loading">Loading…</string>
    <string name="hello_user">Hi %s!</string>
    <string name="price_template_eur">%.02f€</string>
    <string name="pay_template_eur">Pay %.02f€</string>
    <string name="number_items_template">%d items</string>
    <string name="pay">Pay</string>
    <string name="payment_info">Payment Information</string>
    <string name="basic_info">Basic Information</string>

    <!-- SignUp Strings -->
    <string name="name_lbl">Name</string>
    <string name="email_lbl">Email Address</string>
    <string name="password_lbl">Password</string>
    <string name="confirm_password_lbl">Confirm Password</string>
    <string name="address_lbl">Address</string>
    <string name="card_number_lbl">Card Number</string>
    <string name="card_validity_lbl">Card Validity</string>
    <string name="card_type_lbl">Card Type</string>
    <string name="vat_lbl">VAT number</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_dev_add_item">Add Item</string>

    <!-- Drawer -->
    <string name="menu_prev_transactions">Previous Transactions</string>
    <string name="menu_shop">Shop</string>

    <!-- Home Fragment -->
    <string name="total_spent">Spent</string>
    <string name="number_transactions">Transactions</string>
    <string name="current_transaction">Current Transaction</string>
    <string name="edit_basket_item">Edit Basket Item</string>
    <string name="remove_item">Remove Item</string>

    <!-- Transaction Activity -->
    <string name="your_transaction_on">Your Transaction on %s</string>
    <string name="show_qr_code">QR Code</string>
    <string name="nfc">NFC</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_transactions">Transactions</string>

    <string-array name="card_types">
        <item>Visa</item>
        <item>MasterCard</item>
    </string-array>
</resources>